make project structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=welfaring
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/welfaring_db
+spring.datasource.username=welfaring_user
+spring.datasource.password=welfaring_password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# OpenAI API Configuration
+openai.api.key=${OPENAI_API_KEY:your-openai-api-key-here}
+openai.api.url=https://api.openai.com/v1/chat/completions
+openai.api.model=gpt-3.5-turbo
+
+# Server Configuration
+server.port=8080
+server.servlet.context-path=/api
+
+# Logging Configuration
+logging.level.com.demo.welfaring=DEBUG
+logging.level.org.springframework.web=DEBUG
