--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,12 @@ openai.api.model=gpt-3.5-turbo
 server.port=8080
 server.servlet.context-path=/api
 
+# CORS Configuration
+spring.web.cors.allowed-origins=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+
 # Logging Configuration
 logging.level.com.demo.welfaring=DEBUG
 logging.level.org.springframework.web=DEBUG
