--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,6 +1,7 @@
+# Production Configuration
 spring.application.name=welfaring
 
-# Database Configuration
+# Database Configuration (Render PostgreSQL)
 spring.datasource.url=jdbc:postgresql://dpg-d3u4c4bipnbc738ludg0-a.oregon-postgres.render.com:5432/welfaring_db
 spring.datasource.username=welfaring_db_user
 spring.datasource.password=TjOEEI8h1HCYGoWiTqwf4LPJndRopJ6e
@@ -13,7 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 
 # OpenAI API Configuration
-openai.api.key=${OPENAI_API_KEY:sk-proj-koK0G-kmaBJpJM-shzzyFfoP19jFvR2uxHLDZ7XjmkNZjfg}
+openai.api.key=${OPENAI_API_KEY}
 openai.api.url=https://api.openai.com/v1/chat/completions
 openai.api.model=gpt-3.5-turbo
 
@@ -30,3 +31,5 @@ spring.web.cors.allow-credentials=true
 # Logging Configuration
 logging.level.com.demo.welfaring=INFO
 logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=WARN
+logging.level.org.hibernate=WARN
