--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,9 @@ openai.api.model=gpt-3.5-turbo
 server.port=${PORT:8080}
 server.servlet.context-path=/api
 
+# Spring Profile (Render Docker용)
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:docker}
+
 # CORS Configuration
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
