--- a/bin/main/application-docker.properties
+++ b/bin/main/application-docker.properties
@@ -1,9 +1,10 @@
+# Docker Configuration
 spring.application.name=welfaring
 
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://dpg-d3u4c4bipnbc738ludg0-a.oregon-postgres.render.com:5432/welfaring_db
-spring.datasource.username=welfaring_db_user
-spring.datasource.password=TjOEEI8h1HCYGoWiTqwf4LPJndRopJ6e
+# Database Configuration (Render PostgreSQL)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://dpg-d3u4c4bipnbc738ludg0-a.oregon-postgres.render.com:5432/welfaring_db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:welfaring_db_user}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:TjOEEI8h1HCYGoWiTqwf4LPJndRopJ6e}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
@@ -13,16 +14,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 
 # OpenAI API Configuration
-openai.api.key=${OPENAI_API_KEY:sk-proj-koK0G-kmaBJpJM-shzzyFfoP19jFvR2uxHLDZ7XjmkNZjfg}
+openai.api.key=${OPENAI_API_KEY}
 openai.api.url=https://api.openai.com/v1/chat/completions
 openai.api.model=gpt-3.5-turbo
 
 # Server Configuration
-server.port=${PORT:8080}
+server.port=8080
 server.servlet.context-path=/api
-
-# Spring Profile (Render Docker용)
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:docker}
 
 # CORS Configuration
 spring.web.cors.allowed-origins=*
@@ -33,3 +31,5 @@ spring.web.cors.allow-credentials=true
 # Logging Configuration
 logging.level.com.demo.welfaring=INFO
 logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=WARN
+logging.level.org.hibernate=WARN
