--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,27 +30,29 @@ spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 
-# OAuth 2.0 설정
-spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
-spring.security.oauth2.client.registration.google.scope=openid,profile,email
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/api/login/oauth2/code/google
-
-spring.security.oauth2.client.registration.kakao.client-id=${KAKAO_CLIENT_ID}
-spring.security.oauth2.client.registration.kakao.client-secret=${KAKAO_CLIENT_SECRET}
-spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/api/login/oauth2/code/kakao
-
-# OAuth Provider 설정
-spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
-spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
-spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v2/userinfo
-spring.security.oauth2.client.provider.google.user-name-attribute=id
-
-spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
-spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
-spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
-spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+## OAuth 2.0 설정은 배포 환경변수로만 주입합니다 (등록 정보가 비어있을 때 부팅 실패 방지)
+# 예) Render 환경변수 키 사용:
+# spring.security.oauth2.client.registration.google.client-id
+# spring.security.oauth2.client.registration.google.client-secret
+# spring.security.oauth2.client.registration.google.scope=openid,profile,email
+# spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+# spring.security.oauth2.client.registration.google.client-authentication-method=client_secret_basic
+# spring.security.oauth2.client.registration.google.redirect-uri=https://<your-domain>/api/login/oauth2/code/google
+# spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+# spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+# spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v2/userinfo
+# spring.security.oauth2.client.provider.google.user-name-attribute=id
+#
+# spring.security.oauth2.client.registration.kakao.client-id
+# spring.security.oauth2.client.registration.kakao.client-secret
+# spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
+# spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+# spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
+# spring.security.oauth2.client.registration.kakao.redirect-uri=https://<your-domain>/api/login/oauth2/code/kakao
+# spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+# spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+# spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+# spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 
 # JWT 설정
 jwt.secret=${JWT_SECRET:your-secret-key-here-must-be-at-least-256-bits-long}
