--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 
 # OpenAI API Configuration
-openai.api.key=${OPENAI_API_KEY}
+openai.api.key=${OPENAI_API_KEY:}
 openai.api.url=https://api.openai.com/v1/chat/completions
 openai.api.model=gpt-3.5-turbo
 
