--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.springframework.ai:spring-ai-starter-openai'
+	implementation "org.springframework.ai:spring-ai-openai-spring-boot-starter"
+	implementation 'org.springframework.ai:spring-ai-openai'
+	implementation "org.springframework.boot:spring-boot-starter-webflux"
+	implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
 }
 
 tasks.named('test') {
