--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ node_modules/
 # dotenv environment variables file
 .env
 .env.local
+.envrc
+.env.local
 .env.development.local
 .env.test.local
 .env.production.local
