--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -8,8 +8,9 @@ spring.datasource.password=TjOEEI8h1HCYGoWiTqwf4LPJndRopJ6e
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
+spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 
@@ -22,11 +23,17 @@ openai.api.model=gpt-3.5-turbo
 server.port=${PORT:8080}
 server.servlet.context-path=/api
 
-# CORS Configuration
+# CORS Configuration (set your domains)
 spring.web.cors.allowed-origins=*
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
+spring.web.cors.allowed-methods=GET,POST,OPTIONS
+spring.web.cors.allowed-headers=Authorization,Content-Type
 spring.web.cors.allow-credentials=true
+
+# Hikari Pool
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=30000
 
 # Logging Configuration
 logging.level.com.demo.welfaring=INFO
